[package]
name = "flipperbit"
version = "0.1.3"
description = "Corrupted files generator. Random bits flipper."
documentation = "https://github.com/0xor0ne/flipperbit"
readme = "README.md"
authors = ["0xor0ne"]
license = "GPL-3.0-only"
edition = "2021"
homepage = "https://github.com/0xor0ne/flipperbit"
repository = "https://github.com/0xor0ne/flipperbit"
keywords = ["bit", "fuzzing", "file-manipulation", "flipper", "corruption"]
categories = ["command-line-utilities"]

[[bin]]
name = "flipperbit"

[profile.release]
strip = "symbols"
# panic = "abort"

[dependencies]
simple-error = "0.2.3"
rand = "0.8.5"
clap = { version = "4.4.7", features = ["derive"] }
debugoff = { version = "0.2.2", features = ["obfuscate", "syscallobf"], optional = true }

[features]
dbgoff = ["debugoff"]
